--- a/_posts/thesis_chapters/2024-11-5-Design.md
+++ b/_posts/thesis_chapters/2024-11-5-Design.md
@@ -316,11 +316,11 @@ Participants spent a widely different length of time creating these graphics for
 <!-- The previous section addresses changes to primary tools used to create game code and assets and response to the emerging tensions experienced by participants in P1. -->
 
 <!-- Before outlining tensions related to technical demands on facilitator time in this section and the subsequent introduction of supporting forms of documentation, some brief observations on impact are useful.  -->
-The introduction of a half-baked template and the UMC approach had the unintended consequence of reducing the average working group size and also helped by introducing coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities. However, a negative consequence of having more games being worked on was the increased demand on my time as a technical troubleshooter for code problems. This section addresses this tension and others related to the introduction of supporting forms of documentation.
+The introduction of a half-baked template and the UMC approach had the unintended consequence of reducing the average working group size and also helped by introducing coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities. The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games and set a path of working in a smaller group. A negative consequence of smaller group sizes and thus having more games being worked on was the increased demand on my time as a technical troubleshooter for code problems. This section addresses this tension and others related to the introduction of supporting forms of documentation.
 
 <!-- The in-tool scaffolding within primary tool outlined in the previous section aligns with microworld concepts  of affordances guiding learners towards the exploration of key concepts and reduced reliance on facilitator instruction [@laurillard2020significance], an alignment explored in more detail in this chapters' discussion. -->
 
-While the in-tool scaffolding within the primary tool outlined in the previous section reduced initial reliance on facilitator instruction [@laurillard2020significance], it did not assist participants in implementing new features or adding code structures to their games (e.g., the Create stage of UMC). In P1 and early in P2, my guidance and often direct help was needed at this stage, causing delays and participant frustration due to my limited time with each participant or pair. The documentation created in P1 lacked coherence and a navigational system to help users make use of the resources. During the development period (DA) after P1, I reflected on the tension between learner agency, particularly the role of divergent participant learning paths, and the role of facilitator-led instruction and support, which reappeared consistently in my notes at this time. My reflection was partly driven by two attempts in P1 to deliver whole-class instruction on key coding concepts that I judged to be relevant to the wider group. My reflection on these interventions noted that learner engagement was low, and I surmised that this might be because learners viewed the instruction as not immediately relevant, alien to their favoured hands-on style of working, or as an interruption to the flow of their making activities. This observation aligns with the concept of just-in-time learning approaches within project-based learning [@riel1998education], where access to supporting documentation is provided based on learner need. During the D1 development period, I struggled to reconcile my desire to support this responsive approach with requests from some parents in the feedback on P1, asking for background concepts and explanations of coding constructs. The design and implementation of supporting resources continued to evolve at a frantic pace at the start of P2, and I finally created three main sources of documentation: quick start cards, written instructions, and code snippets, which are outlined in the following section.
+While the in-tool scaffolding within the primary tool outlined in the previous section reduced initial reliance on facilitator instruction [@laurillard2020significance], it did not assist participants in implementing new features or adding code structures to their games (e.g., the _Create_ stage of UMC). In P1 and early in P2, my guidance and often direct help was needed at this stage, causing delays and participant frustration due to my limited time with each participant or pair. During the development period after P1, I reflected on the tension between learner agency, particularly the role of divergent participant learning paths, and the role of facilitator-led instruction and support, which reappeared consistently in my notes at this time. My reflection was partly driven by two attempts in P1 to deliver whole-class instruction on key coding concepts that I judged to be relevant to the wider group. My reflection on these interventions noted that learner engagement was low, and I surmised that this might be because learners viewed the instruction as not immediately relevant, alien to their favoured hands-on style of working, or as an interruption to the flow of their making activities. This observation aligns with the concept of just-in-time learning approaches within project-based learning [@riel1998education], where access to supporting documentation is provided based on learner need. During this development period, I struggled to reconcile my desire to support this responsive approach with requests from some parents in the feedback on P1, asking for background concepts and explanations of coding constructs. The design and implementation of supporting resources continued to evolve at a frantic pace at the start of P2, and I finally created three main sources of documentation: quick start cards, written instructions, and code snippets, which are outlined in the following section.
 
 <!-- or a nagivational , especially when combined with the disparate approach to graphical and audio asset creation, had resulted in an overly complex object. -->
 <!-- DOES THE LR EXPLORE THIS TENSION? -->
@@ -337,19 +337,25 @@ by Mozilla and the Phaser developers. -->
 
 #### The use of documentation to address contradictions
 
-This section explores the introduction of quick start cards, instructional documents, and code snippets to address some of the contradictions in the learning design outlined above. Quick start cards, simple printouts highlighting key affordances of the template, became a crucial resource for participants to get started with the starting template game. During the development period (D1), I used the revised template design in a one-off game-making session with trainee computing students. This session culminated in a challenge to create an activity for a holiday event focused on creative game coding for families. In response, three students produced printable Word documents that highlighted key affordances of the design, mirroring my facilitation of their game-making session. Specifically, these printed resources focused on key lines of code and demonstrated how they could be altered to impact game behaviour (see Figure 5.cards below).
+This section explores the introduction of quick start cards, written instructions, and code snippets to address some of the contradictions in the learning design outlined above. _Quick start cards_, simple printouts highlighting the key affordances of the template involving: game mechanics such as movement, jumping, level design, and the final challenge of swapping out the look of one or more characters by designing pixel art and replacing the line of code that adds the asset to the game. These printed resources which highlighted key lines of code and demonstrated how they could be altered to impact game behaviour (see Figure 5.cards below), became a crucial resource for participants to get started with the starting template game from P2 onwards.
+
+<!--
+MOVE TO APPENDIX
+During the development period, I used the revised template design in a one-off game-making session with trainee computing students. This session culminated in a challenge to create an activity for a holiday event focused on creative game coding for families. In response, three students produced printable Word documents that highlighted key affordances of the design, mirroring my facilitation of their game-making session. Specifically,  -->
+
+
 
 ![](./Pictures/velocity_jscard.png){width=95%}
 5.cards - Example of a Quick start card
 
-At this stage, the options involved game mechanics such as movement, jumping, level design, and the final challenge of swapping out the look of one or more characters by designing pixel art and replacing the line of code that adds the asset to the game. A version of the quick start cards is available online and as part of Appendix.tech. These _quick start cards_ supported participants' initial interaction with the code in a way that strongly aligned with the use and modify stages of the UMC framework [@franklin_analysis_2020]. The starting process addressed the tension of providing documentation to support users in completing coding tasks while also facilitating choice over learner pathways.
+A version of the quick start cards is available online and as part of Appendix.tech. These _quick start cards_ supported participants' initial interaction with the code in a way that strongly aligned with the use and modify stages of the UMC framework [@franklin_analysis_2020]. The starting process addressed the tension of providing documentation to support users in completing coding tasks while also facilitating choice over learner pathways.
 
 ##### Structuring instructional tutorial resources and code snippets
 
 <!-- BELOW Initially I structured the book chapter participants working their way through the online resources. HOW -->
 
 <!-- While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context. -->
-To meet participants' requests for foundational coding knowledge, in DA, I developed an online manual with step-by-step chapters guiding users through coding the core template structure. While this linear format did not fully align with my choice-driven, face-to-face sessions, I envisioned it as supplementary reinforcement for learning outside of sessions. Writing these chapters revealed a technique that helped balance structured guidance with choice-driven learning. Each chapter demonstrated a code feature or principle through a playable game project based on the core game template, hosted in an online code playground. While the use of code examples or *snippets* is a common professional practice in problem-solving [@yang_stack_2017], their use by novice learners presents challenges related to relevance, consistency, and accessibility [@treude_understanding_2017]. Initially, I had encouraged participants to use code snippets from the Phaser website, but their difficulties understanding and applying these abstracted examples prompted me to create more tailored resources.
+To meet participants' requests for foundational coding knowledge, in the development period after P1, I developed an online manual with step-by-step chapters guiding users to code a core game template structure from first principles. While this linear format did not fully align with my choice-driven, face-to-face sessions, I envisioned it as supplementary reinforcement for learning outside of sessions. Writing these chapters revealed a technique that helped balance structured guidance with choice-driven learning. Each chapter demonstrated a code feature or principle through a playable game project based on the core game template, hosted in an online code playground. While the use of code examples or *snippets* is a common professional practice in problem-solving [@yang_stack_2017], their use by novice learners presents challenges related to relevance, consistency, and accessibility [@treude_understanding_2017]. Initially, I had encouraged participants to use code snippets from the Phaser website, but their difficulties understanding and applying these abstracted examples prompted me to create more tailored resources.
 
 I later extended this approach by creating stand-alone code snippets that illustrated requested game features as gameplay design patterns, such as *jumping on an enemy to zap it* and *making a moving enemy* (see Appendix.toby for an applied example). In the early stages of P2, learners accessed these projects through a simple Google document with links and brief descriptions. I continued developing new projects and producing printable instructions to support these code snippets, ensuring that each snippet linked to a descriptive chapter and vice versa. To help learners situate the code within the correct structure, all projects used the core game template and included only the new code required for each feature. I also experimented with ways to present these feature choices in an accessible, engaging format, which I describe in detail in Appendix 5.map. Recognising that multiple documentation formats sometimes led to confusion, I created a centralised hub to host both snippets and tutorial chapters, making navigation more intuitive and orienting documentation towards participants' gameplay experience.
 
@@ -387,7 +393,6 @@ Chapter 2 reviewed research on using collections of gameplay design patterns to 
 Table 5.x Categorisation of game design patterns used in P4.
 
 
-
 This section outlined two key types of secondary support tools developed in response to tensions arising after introducing the primary tools discussed in the previous section. While the code snippets, practical instructions, and chapters on core principles continued to pose some challenges (as seen in Vignette 6.1), the video data analysed in the following chapter shows an increase in participants’ practical ability to implement game features, suggesting an enhancement in their instrumental agency. In addition, participants' increase in agency extends beyond just instrumental application. In both P1 and P2, participants made specific requests for new features, which, when deemed suitable by me as the facilitator, were added to the menu of game design patterns. This choice-driven approach can be seen as both relational and authorial agency within the framework discussed in Chapter 3.
 
 <!-- LINK & MORE SIGNPOSTING? -->
@@ -418,7 +423,7 @@ Chapter 6 analyses the potential of activities which help build the participants
 
 #### Social coding processes
 
-The changes in tools and documentation introduced in P2, as described earlier, were initially implemented to address technical issues but also had a significant impact on the cultural dynamics of the game-making group. These adjustments ameliorated some of the systemic conditions that contributed to the conflicts observed in P1. For example, the introduction of a partially completed, half-baked game template had a notable effect on the division of labour within the group. This adjustment led to the formation of smaller, more autonomous groups. In the case study discussed earlier, a problematic division of labour had alienated non-coding team members from the overall process. By allowing participants to work individually or with family members, these barriers to engagement were substantially reduced. The highlighted affordances of the template and the accompanying collection of code examples, as outlined in earlier sections, proved impactful. Despite their relative simplicity, these tools facilitated the creation of games with diverse and complex styles and themes, even at early stages. The provision of a functioning starter game significantly increased the amount of time participants spent playtesting both their own and others' games. Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 6.1 for a clear example). In response, I prioritised supporting participants in resolving these issues to ensure their games were functional and playable. By P2, playtesting had evolved into a source of rich, productive peer social interactions. Observing this, I recognised the potential of these interactions and, in preparation for P3, aimed to intervene more strategically and gently to nurture and encourage these emergent patterns of peer collaboration and engagement.
+The changes in tools and documentation introduced in P2, as described earlier, were initially implemented to address technical issues but also had a significant impact on the cultural dynamics of the game-making group. These adjustments ameliorated some of the systemic conditions that contributed to the conflicts observed in P1. For example, the introduction of a partially completed, half-baked game template had a notable effect on the division of labour within the group. This adjustment led to the formation of smaller, more autonomous groups. In the case study explored in Appendix.bee, a problematic division of labour alienated non-coding team members from the overall process. By allowing participants to work individually or with family members, these barriers to engagement were substantially reduced. The highlighted affordances of the template and the accompanying collection of code examples, as outlined in earlier sections, proved impactful. Despite their relative simplicity, these tools facilitated the creation of games with diverse and complex styles and themes, even at early stages. The provision of a functioning starter game significantly increased the amount of time participants spent playtesting both their own and others' games. Video data captured instances where participants expressed frustration when errors rendered their games unplayable (see Vignette 6.1 for a clear example). In response, I prioritised supporting participants in resolving these issues to ensure their games were functional and playable. By P2, playtesting had evolved into a source of rich, productive peer social interactions. Observing this, I recognised the potential of these interactions and, in preparation for P3, aimed to intervene more strategically and gently to nurture and encourage these emergent patterns of peer collaboration and engagement.
 
 
 <!-- In journal notes, I observed that the shift of process in terms of division of labour from  P1 to P2 afforded by the introduction of a _half-baked_ template. The use of a starting template and scaffolded use and modify early activities increased the number of games being made as it reduced the typical working group to individuals or pairs. -->
@@ -477,7 +482,7 @@ While this provides an incomplete picture of the missions and drama process, due
 
 ## Chapter Discussion
 
-This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. The contradictions explored initially focused on technical and then more social dimensions of the learning design, a process which has surfaced some of the barriers to achieving computational fluency needed to complete the text coding of a multi-media project. The next section synthesises the features of the design narrative, existing research, specifically UMC, half-baked approach and constructionist design principles. To do this it employs an argumentative grammar fusing elements of DBR and CHAT concepts: specifically iterative processes, analysis of emerging tensions between systems elements, a focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept.
+This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. The contradictions explored initially focused on technical and then more social dimensions of the learning design, a process which has surfaced some of the barriers to achieving computational fluency needed to complete the text coding of a multi-media project. The next section synthesises the features of the design narrative, underpinned by existing research, specifically UMC, half-baked approach and constructionist design principles. To do this it employs an argumentative grammar fusing elements of DBR and CHAT concepts: specifically iterative processes, analysis of emerging tensions between systems elements, a focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept.
 
 <!-- HAS IT?
 REVISIT RESEARCH QUESTIONS -->
@@ -507,7 +512,7 @@ In addition, design  affordances here as a form of delegated agency. Authorial A
 
 <!-- LATER? My choices balanced the value of positive engagement of asset creating, development of digital literacy skills associated with web production, and a focus on promoting code modification.   -->
 
-Turning to constructionist research, a more extensive set of design heuristics is evident in studies of decisions made in creating microworld environments and in the development of Scratch (see Chapter 2 for a summary). Techniques or concepts present in constructionist design research, embodied in this intervention's toolset, include a simplified code authoring environment with live feedback in a preview window, techniques to avoid and correct syntax errors via the linting capabilities of the code playground (see glossary), and the use of a GDP menu to encourage creative but scaffolded design. A detailed description of these elements is explored in Appendix.tech. Of particular relevance to this design process is the principle _choose black boxes carefully_ [@resnick_reflections_2005]. Resnick et al.[-@resnick_reflections_2005] describe black boxes as abstractions that remove potentially problematic areas of the production process, creating a protective, scaffolded learning experience while maintaining a boundary with the authentic challenges of coding in the wild. Black box decisions steer learners toward exploring preferred concepts. Papert's [-@papert_mindstorms_1980] work on Turtle control in LOGO exemplifies this approach, using abstraction to focus on powerful mathematical ideas. The use of black boxes is also widespread in professional coding practices, particularly through code libraries and frameworks. These tools provide pre-written, self-contained sections of code to simplify complex operations. In my design, the Phaser game-making library serves this purpose by managing underlying structures for gravity and physics calculations necessary for object collisions. The template further simplifies these processes by allowing participants to modify gravity settings through a single variable, thus combining professional coding language use with an accessible learning experience. Based on Laurillard's [-@laurillard2020significance] interpretation of the constructionist design of microworlds as being driven by affordances that structure user experimentation to enable exploration and concept formation without reliance on direct instruction, I propose this design as a form of microworld. However, this aspect of the design is compromised by its relatively porous borders between this controlled environment and other, more authentic coding ecosystems. I argue that increased scaffolding of learner resources and tools can enhance instrumental agency for novice coders but potentially at the cost of limiting access to the tools and processes of authentic creative communities. The relationship between authentic and scaffolded processes can be understood as an inherent dialectical tension that learning designers should account for rather than attempt to eliminate.
+Turning to constructionist research, a more extensive set of design heuristics is evident in studies of decisions made in creating microworld environments and in the development of Scratch (see Chapter 2 for a summary). Techniques or concepts present in constructionist design research, embodied in this intervention's toolset, include a simplified code authoring environment with live feedback in a preview window, techniques to avoid and correct syntax errors via the linting capabilities of the code playground (see glossary), and the use of a GDP menu to encourage creative but scaffolded design. A detailed description of these elements is explored in Appendix.tech. Of particular relevance to this design process is the principle _choose black boxes carefully_ [@resnick_reflections_2005]. Resnick et al.[-@resnick_reflections_2005] describe black boxes as abstractions that remove potentially problematic areas of the production process, creating a protective, scaffolded learning experience while maintaining a boundary with the authentic challenges of coding in the wild. Black box decisions steer learners toward exploring preferred concepts. Papert's [-@papert_mindstorms_1980] work on Turtle control in LOGO exemplifies this approach, using abstraction to focus on powerful mathematical ideas. The use of black boxes is also widespread in professional coding practices, particularly through code libraries and frameworks. These tools provide pre-written, self-contained sections of code to simplify complex operations. In my design, the Phaser game-making code library framework serves this purpose by managing underlying structures for gravity and physics calculations necessary for object collisions. In addition, my starting game template further simplified these processes by allowing participants to modify gravity settings through a single variable, thus combining professional coding language use with an accessible learning experience. Based on Laurillard's [-@laurillard2020significance] interpretation of the constructionist design of microworlds as being driven by affordances that structure user experimentation to enable exploration and concept formation without reliance on direct instruction, I propose this design as a form of microworld. When compared to other game coding programs using text languages this learning design can be seen as tightly structured. However, when compared to a constructionist microworld, the structure of my learning design is compromised by its relatively porous borders between this controlled environment and other, more authentic coding ecosystems. I argue that increased scaffolding of learner resources and tools can enhance instrumental agency for novice coders but potentially at the cost of limiting access to the tools and processes of authentic creative communities. The relationship between authentic and scaffolded processes can be understood as an inherent dialectical tension that learning designers should account for rather than attempt to eliminate.
 
 <!-- My design decision to shield new users from the complexity of the underlying configuration of interrelated web-technologies and authentic tools and by abstracting away complexity and highlight design affordances that facilitate creative agency, -->
 
@@ -526,15 +531,21 @@ Addressing authenticity in more detail, it is valuable to re-examine the factors
     Student Helper 3: Think about how much effort goes into.
     Pearl: You just take things for granted don’t you?
 
-Conversely, a significant drawback of using a professional tool for novice learners is the risk of culture shock when participants attempt to step outside the protective, scaffolded learning environment and encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem.
+A possible drawback of using a professional tool for novice learners is the risk of culture shock when participants encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem. The learning design outlined in this chapter helps address at least the beginning of this process by providing a protective, scaffolded learning environment.  
+
+<!--
+REMOVED - ADD BACK IN LATER?
+ Conversely, a significant drawback of using a professional tool for novice learners is the risk of culture shock when participants attempt to step outside the protective, scaffolded learning environment and encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem. -->
 
 
 <!-- Aligned with the general principles of PBL [@hung_engaged_2006], this design has strived for authenticity in varied forms. Authenticity in terms of activity object here is multiple in dimension, e.g in audience, in tool use and in creative processes. While the impact of the authentic dimensions of the tools and process described in this chapter 7 in depth, this section outlines some of the rationale of design descriptions in relation to existing research. -->
 
 
-The process of rising to the concrete via a germ cell concept, while not a requirement for formative interventions, is recognised as a powerful analytical and developmental tool [-@engestrom_embodied_2012]. In seeking the germ cell, the researcher explores complex, messy concrete processes over time to discern overarching concerns that can be expressed as a prototypical abstract germ cell concept. For this learning design, the concept and pedagogy of working with game design patterns (GDPs) emerged not only as an object of activity on a more granular scope than is typical but also as a germ cell concept valuable to both participants and facilitators. In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stepwise, stage-based approach. Stepwise approaches introduce code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task
+The process of rising to the concrete via a germ cell concept is a powerful analytical and developmental tool [-@engestrom_embodied_2012]. In seeking the germ cell, the researcher explores complex, messy concrete processes over time to discern overarching concerns that can be expressed as a prototypical abstract germ cell concept. For this learning design, the concept and pedagogy of working with game design patterns (GDPs) emerged not only as an object of activity on a more granular scope than is typical but also as a germ cell concept valuable to both participants and facilitators. I continue the analysis of the orienting practice of GDPs as a germ cell concept in the following chapter.
 
-While the initial use of GDPs in P1 was piecemeal, by P2, a more structured, stepwise approach had been implemented for participants as part of several guiding activities. GDPs were first identified through playing games in an activity adapted from Moveable Game Jams (ensure this is described or linked to) and were used as a list of features serving as a mediating planning tool. In P2, GDPs were incorporated as affordances into a starter game template, initially highlighted via facilitator interaction and later as the guiding principle of _quick start cards_ to scaffold modifications to the code template. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation. In line with understandings of DBR research outputs, the identification and use of these patterns as research findings would be expressed as a set of "tentative generalisations" in the form of design heuristics drawn from the analysis of concrete practices [@hoadley_design-based_2022, p.215]. Similarly, I propose the orienting practice of GDPs as a tentative candidate for a germ cell concept. I continue the analysis of this proposition in the following chapter.
+In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stepwise, stage-based approach. Stepwise approaches introduce code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. While the initial use of GDPs in P1 was piecemeal, by P2, a more structured, stepwise approach had been implemented for participants as part of several guiding activities. GDPs were first identified through playing games in an activity adapted from Moveable Game Jams (ensure this is described or linked to) and were used as a list of features serving as a mediating planning tool. In P2, GDPs were incorporated as affordances into a starter game template, initially highlighted via facilitator interaction and later as the guiding principle of _quick start cards_ to scaffold modifications to the code template. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation. In line with understandings of DBR research outputs, the identification and use of these patterns as research findings would be expressed as a set of "tentative generalisations" in the form of design heuristics drawn from the analysis of concrete practices [@hoadley_design-based_2022, p.215]. 
+
+
 
 <!-- NOTE - DROP - MAKE MORE DIRECT
 While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
